--- a/dashboard.html
+++ b/dashboard.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container mt-5">
+    <div class="container">
+        <header>
+            <h1 id="roleTitle"></h1>
+            <button class="btn btn-secondary" onclick="toggleTheme()">Toggle Tema</button>
+            <button class="btn btn-danger" onclick="logout()">Logout</button>
+        </header>
         <div id="dashboardContent"></div>
-        <button class="btn btn-danger mt-3" onclick="logout()">Logout</button>
     </div>
     <script src="script.js"></script>
 </body>
