--- a/register.html
+++ b/register.html
@@ -4,31 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
-<body>
-    <div class="container">
-        <h1>Register</h1>
-        <form id="registerForm">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" class="form-control" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" class="form-control" required>
-            </div>
-            <div class="form-group">
-                <label for="role">Role</label>
-                <select id="role" class="form-control" required>
-                    <option value="admin">Admin</option>
-                    <option value="kasir">Kasir</option>
-                    <option value="operator">Operator</option>
-                </select>
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>
-        <p>Sudah punya akun? <a href="index.html">Login di sini</a></p>
+<body class="bg-light">
+    <div class="container d-flex justify-content-center align-items-center vh-100">
+        <div class="card p-4 shadow" style="width: 350px;">
+            <h2 class="text-center">Registrasi</h2>
+            <form id="registerForm">
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text" id="username" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" id="password" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="role" class="form-label">Peran</label>
+                    <select id="role" class="form-select">
+                        <option value="admin">Admin</option>
+                        <option value="kasir">Kasir</option>
+                        <option value="operator">Operator</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Daftar</button>
+            </form>
+            <p class="text-center mt-3">
+                Sudah punya akun? <a href="index.html">Login</a>
+            </p>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
