--- a/dashboard.html
+++ b/dashboard.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1 id="roleTitle"></h1>
-            <button class="btn btn-secondary" onclick="toggleTheme()">Toggle Tema</button>
-            <button class="btn btn-danger" onclick="logout()">Logout</button>
-        </header>
-        <div id="dashboardContent"></div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Dashboard</a>
+            <button class="btn btn-outline-light" onclick="logout()">Logout</button>
+        </div>
+    </nav>
+    <div class="container mt-5">
+        <h1 id="roleTitle" class="text-center"></h1>
+        <div id="dashboardContent" class="mt-4"></div>
     </div>
     <script src="script.js"></script>
 </body>
