--- a/register.html
+++ b/register.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dashboard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="bg-light">
-    <div class="container d-flex justify-content-center align-items-center vh-100">
-        <div class="card p-4 shadow" style="width: 350px;">
-            <h2 class="text-center">Registrasi</h2>
-            <form id="registerForm">
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <input type="text" id="username" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" id="password" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                    <label for="role" class="form-label">Peran</label>
-                    <select id="role" class="form-select">
-                        <option value="admin">Admin</option>
-                        <option value="kasir">Kasir</option>
-                        <option value="operator">Operator</option>
-                    </select>
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Daftar</button>
-            </form>
-            <p class="text-center mt-3">
-                Sudah punya akun? <a href="index.html">Login</a>
-            </p>
-        </div>
+<body>
+  <div class="container mt-5">
+    <h2 id="welcomeText">Welcome</h2>
+    <div id="adminSection" class="mt-3" style="display: none;">
+      <h3>Admin Section</h3>
+      <p>Only accessible to Admin users.</p>
     </div>
-    <script src="script.js"></script>
+    <div id="kasirSection" class="mt-3" style="display: none;">
+      <h3>Kasir Section</h3>
+      <p>Only accessible to Kasir users.</p>
+    </div>
+    <div id="operatorSection" class="mt-3" style="display: none;">
+      <h3>Operator Section</h3>
+      <p>Only accessible to Operator users.</p>
+    </div>
+    <button class="btn btn-danger mt-3" id="logout">Logout</button>
+  </div>
+
+  <script>
+    const user = JSON.parse(localStorage.getItem('user'));
+
+    if (!user) {
+      window.location.href = 'index.html';
+    } else {
+      document.getElementById('welcomeText').innerText = `Welcome, ${user.username} (${user.role})`;
+      if (user.role === 'admin') document.getElementById('adminSection').style.display = 'block';
+      if (user.role === 'kasir') document.getElementById('kasirSection').style.display = 'block';
+      if (user.role === 'operator') document.getElementById('operatorSection').style.display = 'block';
+    }
+
+    document.getElementById('logout').addEventListener('click', () => {
+      localStorage.removeItem('user');
+      window.location.href = 'index.html';
+    });
+  </script>
 </body>
 </html>
